[SYNCOPE-1501] Fix