@@ -80,10 +80,10 @@ public class ConnectorRestClient extends BaseRestClient {
     }
 
     public static List<String> getExtAttrNames(
-        final String adminRealm,
-        final String objectClass,
-        final String connectorKey,
-        final Collection<ConnConfProperty> conf) {
+            final String adminRealm,
+            final String objectClass,
+            final String connectorKey,
+            final Collection<ConnConfProperty> conf) {
 
         ConnInstanceTO connInstanceTO = new ConnInstanceTO();
         connInstanceTO.setAdminRealm(adminRealm);
@@ -98,7 +98,7 @@ public class ConnectorRestClient extends BaseRestClient {
         return connIdObjectClass.isPresent()
                 ? connIdObjectClass.get().getAttributes().stream().
                         map(PlainSchemaTO::getKey).collect(Collectors.toList())
-                : Collections.emptyList();
+                : List.of();
     }
 
     /**
@@ -184,7 +184,7 @@ public class ConnectorRestClient extends BaseRestClient {
     }
 
     public static List<ConnIdObjectClassTO> buildObjectClassInfo(
-        final ConnInstanceTO connInstanceTO, final boolean includeSpecial) {
+            final ConnInstanceTO connInstanceTO, final boolean includeSpecial) {
 
         List<ConnIdObjectClassTO> result = List.of();
         try {
